--- a/code/index.html
+++ b/code/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div id="game-board">
+    <p class="text">Time: <span id="timer">1:00</span></p>
     <button type="button" id="start">Start</button>
     <div id="field"></div>
   </div>
