--- a/code/index.html
+++ b/code/index.html
@@ -11,6 +11,15 @@
   <div id="game-board">
     <p class="text">Time: <span id="timer">1:00</span></p>
     <button type="button" id="start">Start</button>
+    <div class="level">
+      <button type="button" id="easy">Easy</button>
+      <button type="button" id="medium">Medium</button>
+      <button type="button" id="hard">Hard</button>
+    </div>
+    <div class="text score">
+      <p>Score</p>
+      <p id="points"></p>
+    </div>
     <div id="field"></div>
   </div>
 
