fin de juego con click a hans topo

--- a/code/index.html
+++ b/code/index.html
@@ -20,6 +20,7 @@
       <p>Score</p>
       <p id="points"></p>
     </div>
+    <div id="game-over"><h1>Game Over</h1></div>
     <div id="field"></div>
   </div>
 
