--- a/code/index.html
+++ b/code/index.html
@@ -20,6 +20,7 @@
       <p>Score</p>
       <p id="points"></p>
     </div>
+    <div id="end-of-game"></div>
     <div id="game-over"><h1>Game Over</h1></div>
     <div id="field"></div>
   </div>
@@ -27,7 +28,6 @@
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
   <script type="text/javascript" src="js/game.js"></script>
-  <script type="text/javascript" src="js/player.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
 
 </body>
