--- a/code/index.html
+++ b/code/index.html
@@ -8,6 +8,7 @@
   <title>Whack a Mole!</title>
 </head>
 <body>
+  <audio id=“kitty” src="sounds/nyancat.mp3" type="audio/wav" preload="auto"></audio>
   <div id="game-board">
     <p class="text">Time: <span id="timer">1:00</span></p>
     <button type="button" id="start">Start</button>
